- Bugfix for dropdown not showing on mobile - Removed beer style from dropdown

--- a/Beer_Spreadsheet_Frontend/src/App.css
+++ b/Beer_Spreadsheet_Frontend/src/App.css
@@ -691,7 +691,7 @@ button:disabled {
     vertical-align: middle;
   }
 
-  .ratings-table tr.detail-row {
+  .ratings-table tr.detail-row td:nth-child(2) {
     display: none;
   }
 
